# format-pg-drop-table

./: README.md  format-pg-drop-table.cabal
src/: Main.hs
